Corrigindo botão de adiciona 1
Co-authored-by: deivid-a1 <190026758@aluno.unb.br>

--- a/restaurante_do_guloso/requests/templates/menu.html
+++ b/restaurante_do_guloso/requests/templates/menu.html
@@ -18,10 +18,12 @@
         <div class="">
             <nav class="d-flex justify-content-around">
                 <form class="d-flex">
-                        <input class="form-control me-2" type="text" placeholder="Pedidos (ex: 10)" aria-label="Search" name="qtd1">
+                        <input class="form-control me-2" type="text" placeholder="Pedidos (ex: 10)" aria-label="Search" name="qtd">
                         <button class="btn btn-outline-success" type="submit">Adicionar</button>
                 </form>
-                <button type="button" class="btn btn-success" name="plus">Adicionar um Pedido</button>
+		<form>
+			<button type="submit" class="btn btn-success" value="True" name="plus">Adicionar um Pedido</button>
+		</form>
             </nav>
         </div>
         <div class = "d-flex justify-content-center">
